bridge/base/mysqldb-deployment.yaml
#! mysqldb-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysqldb
    namespace: upcominginternshipdisplayer2027
    labels:
        com.docker.compose.project: upcominginternshipdisplayer2027
        com.docker.compose.service: mysqldb
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: upcominginternshipdisplayer2027
            com.docker.compose.service: mysqldb
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: upcominginternshipdisplayer2027
                com.docker.compose.service: mysqldb
                com.docker.compose.network.backend-network: "true"
        spec:
            containers:
                - name: mysqldb
                  image: mysql:8.0
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - mysqladmin ping -h 127.0.0.1 -u root -p${ROOT_PASSWORD} --silent
                    periodSeconds: 10
                    initialDelaySeconds: 45
                    timeoutSeconds: 5
                    failureThreshold: 10
                  ports:
                    - name: mysqldb-33060
                      containerPort: 33060
                    - name: mysqldb-3306
                      containerPort: 3306
                  volumeMounts:
                    - name: var-lib-mysql
                      mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  persistentVolumeClaim:
                    claimName: mysqldb-mysql-data
