bridge/base/mysqldb-expose.yaml
#! mysqldb-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mysqldb
    namespace: upcominginternshipdisplayer2027
    labels:
        com.docker.compose.project: upcominginternshipdisplayer2027
        com.docker.compose.service: mysqldb
spec:
    selector:
        com.docker.compose.project: upcominginternshipdisplayer2027
        com.docker.compose.service: mysqldb
    ports:
        - name: mysqldb-33060
          port: 33060
          targetPort: mysqldb-33060
        - name: mysqldb-3306
          port: 3306
          targetPort: mysqldb-3306
