bridge/base/mysqldb-service.yaml
#! mysqldb-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mysqldb-published
    namespace: upcominginternshipdisplayer2027
    labels:
        com.docker.compose.project: upcominginternshipdisplayer2027
        com.docker.compose.service: mysqldb
spec:
    selector:
        com.docker.compose.project: upcominginternshipdisplayer2027
        com.docker.compose.service: mysqldb
    ports:
        - name: mysqldb-3306
          port: 3306
          protocol: TCP
          targetPort: mysqldb-3306
