bridge/base/backend-network-network-policy.yaml
#! backend-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: backend-network-network-policy
    namespace: upcominginternshipdisplayer2027
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.backend-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.backend-network: "true"
